--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -9,22 +9,23 @@
 //@import './vendors/bootstrap-5.1.1/scss/bootstrap.scss';
 //
 //@import './base/reset'; ---
-//@import './base/typography'; ---
+@import './base/typography';
 //@import './base/base';
 //@import './base/animations;
 //
-//@import './layout/navigation'; ---
+@import './layout/navigation';
 @import './layout/using_grid_only';
 //@import './layout/header';
 //@import './layout/article'; ---
-//@import './layout/footer'; ---
+@import './layout/footer';
 //@import './layout/sidebar';
 //@import './layout/forms';
+@import './layout/aside';
 
 //
 //@import './components/media';
 //@import './components/thumbnails';
-//@import './components/buttons'; ---
+@import './components/buttons';
 //@import './components/pagination';
 //@import './components/carousel';
 //@import './components/cover';
@@ -33,6 +34,8 @@
 //@import './components/inputs'; ---
 @import './components/cards';
 @import './components/images';
+//@import './components/tags';
+
 
 //
 @import './pages/home';
