--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -1,3 +1,48 @@
 body {
-    font-family: 'Roboto Mono', monospace;
+    font-family: $font-modern, $font-classic;
 }
+
+/* base/typography */
+
+body{
+    font-family: $font-classic;
+    font-family: $font-modern;
+    }
+    
+    h1 {
+        font-family: $font-classic;
+        font-size: $xxx-large;
+        font-weight: $weight-bold;
+    }
+    
+    h2 {
+        font-family: $font-classic;
+        font-size: $xx-large;
+        font-weight: $weight-bold;
+    }
+    
+    h3 {
+        font-family: $font-classic;
+        font-size: $x-large;
+        font-weight: $weight-bold;
+        padding:5px;
+    }
+    
+    label {
+        font-family: $font-classic;
+        font-size: $x-small;
+        font-weight: $weight-bold;
+        padding: 5px;;
+    }
+        
+    p {
+        font-family: $font-modern;
+        font-size: $medium;
+        font-weight: $weight-normal;
+    }
+    
+    a {
+        font-family: $font-modern;
+        font-size: $large;
+        font-weight: $weight-bold;
+    }
