--- a/assets/sass/components/_buttons.scss
+++ b/assets/sass/components/_buttons.scss
@@ -1,5 +1,69 @@
-/* component/buttons */
-button {
-    background-color: coral;
-    color: white;
+
+.button-container {
+	height: 100%;
+}
+
+a {
+	color: inherit;
+	
+	&:hover {
+		color: green;
+	}
+}
+
+//** helper
+.button-container {
+	align-items: center;
+	justify-content: center;
+}
+
+.uppercase {
+	text-transform: uppercase;
+}
+
+//** button
+.btn1 {
+	display: inline-block;
+	background: transparent;
+	color: inherit;
+	font: inherit;
+	border: 0;
+	outline: 0;
+	padding: 0;
+	transition: all 200ms ease-in;
+	cursor: pointer;
+	
+	&--primary {
+		background: coral;
+		color: white;
+		box-shadow: 0 0 10px 2px rgba(0, 0, 0, .1);
+		border-radius: 2px;
+		padding: 12px 36px;
+		
+		&:hover {
+			background: darken(rgb(78, 76, 76), 4%);
+		}
+		
+		&:active {
+			background: cyan;
+			box-shadow: inset 0 0 10px 2px rgba(0, 0, 0, .2);
+		}
+	}
+	
+	&--inside {
+		margin-left: -96px;
+	}
+}
+
+//** form
+.form {	
+	&__field {
+		width: 360px;
+		background: #fff;
+		color: purple;
+		font: inherit;
+		border: 0;
+		outline: 0;
+		padding: 22px 18px;
+	}
 }
