--- a/assets/sass/layout/_aside.scss
+++ b/assets/sass/layout/_aside.scss
@@ -1,16 +1,34 @@
 
 .aside {
-    &__list {}
+    &__list h3 { 
+        font-family: $font-modern;
+        font-size: $medium;
+    }
+    &__tags h1 {
+        font-family: $font-modern;
+        font-size: $medium;
+    }
+
     &__tags ul li {
-        padding: 2px 4px;
         background-color: steelblue;
-        margin-right: 1px;
         color: white;
         list-style: none;
+        font-family: $font-modern;
+        font-size: $small;
+        display: inline-block;
+        padding:0.3em;
+        margin-top: 0.3em;
     }
     
-    &__higlight {}
-    &__higlight__card{}
+    &__higlight h1 {
+        font-family: $font-modern;
+        font-size: $medium;
+    }
+    &__higlight__card h4 {
+        font-family: $font-modern;
+        font-size: $small;
+        padding-bottom: 2em;
+    }
 }
 
 
