--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,46 +1,23 @@
 // main.scss # Manifest File
-
+// 1 Abstracts
 @import './abstracts/breakpoints';
 @import './abstracts/variables';
-//@import './abstracts/functions';
-//@import './abstracts/mixins'; ---
-//@import './abstracts/placeholders';
-//
-//@import './vendors/bootstrap-5.1.1/scss/bootstrap.scss';
-//
-//@import './base/reset'; ---
+// 2 Vendors
+// 3 Base
+@import './base/reset';
 @import './base/typography';
-//@import './base/base';
-//@import './base/animations;
-//
+//4 Layout
 @import './layout/navigation';
-@import './layout/using_grid_only';
-//@import './layout/header';
-//@import './layout/article'; ---
-@import './layout/footer';
-//@import './layout/sidebar';
-//@import './layout/forms';
 @import './layout/aside';
-
-//
-//@import './components/media';
-//@import './components/thumbnails';
+@import './layout/section';
+@import './layout/footer';
+@import './layout/css-grid';
+//5 Media
 @import './components/buttons';
-//@import './components/pagination';
-//@import './components/carousel';
-//@import './components/cover';
-//@import './components/dropdown';
-//@import './components/collapsable-menu'; ---
-//@import './components/inputs'; ---
 @import './components/cards';
 @import './components/images';
-//@import './components/tags';
-
-
-//
+@import './components/collapsable-menu';
+// 6 Pages
 @import './pages/home';
-//@import './pages/contact';
-//
-//@import './themes/theme';
-//@import './themes/admin';
-@import './themes/show-layout-grid';
+// 7 Themes
+//@import './themes/show-layout';
